--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 										using Bizagi and IBM Rational and Technical Writing.</p>
 								</div>
 								<ul class="actions special">
-									<li><a href="#" class="button style1 large">Resume</a></li>
-									<li><a href="#" class="button style2 large">More Info</a></li>
+									<li><a href="https://drive.google.com/file/d/1klIOsa9TdTf97b-qVz0aeTex6pI127JP/view?usp=sharing" class="button style1 large">Resume</a></li>
+									<li><a href="#footer" class="button style2 large">More Info</a></li>
 								</ul>
 							</section>
 
